Colour contrast correction
Updated breadcrumbs.sass to fix color contrast

--- a/source-assets/styles2022/sass/custom/breadcrumbs.sass
+++ b/source-assets/styles2022/sass/custom/breadcrumbs.sass
@@ -14,4 +14,4 @@
       text-decoration: underline
 
   span
-    color: $c_jungle
+    color: $c_lighter_pine
